<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/fundo"
    tools:context="br.com.code85.lifepower.activities.MainActivity">


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="188dp"
        android:id="@+id/email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="23dp"
        android:id="@+id/senha"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:hint="@string/senha"/>

    <com.facebook.login.widget.LoginButton
        android:text="@string/facebook"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/loginButton" />

    <TextView
        android:text="@string/crie_sua_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_entrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/crie_sua_conta"
        android:clickable="true"
        android:onClick="cadastrarUsuario"/>

    <Button
        android:text="@string/entrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_entrar"
        android:layout_below="@+id/loginButton"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignStart="@+id/loginButton"
        android:onClick="fazerLogin"
        android:textColor="@color/textIcons"
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/GreenButton"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_oficial"
        android:id="@+id/imageView"
        android:layout_above="@+id/senha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
