<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cadastro_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.code85.lifepower.activities.CadastroUsuarioActivity"
    tools:showIn="@layout/activity_cadastro_usuario">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="60dp"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/senha"
        android:hint="@string/senha"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/repitaSenha"
        android:hint="@string/repita_senha"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/senha"
        android:layout_alignStart="@+id/senha"
        android:layout_marginTop="30dp"/>

    <Button
        android:text="@string/cadastrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blueButton"
        android:textColor="@color/textIcons"
        android:id="@+id/button3"
        android:onClick="loginPost"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />


</RelativeLayout>
