<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/fundo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.code85.lifepower.activities.CadastroActivity"
    tools:showIn="@layout/activity_cadastro">

    <com.rey.material.widget.ProgressView
        android:id="@+id/circular_progress"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        app:pv_autostart="true"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/dados_do_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:background="#99000000"
                android:textColor="@color/textIcons"/>

          <!--Stretch: estica a coluna 0 para o TextView caber todo numa linha -->
            <!-- Shrink: encolhe a coluna 1 que contém o EditText  -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shrinkColumns="1"
                android:stretchColumns="0">

                <TableRow
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/nome" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/idade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/idade" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/rg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/rg" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/telefones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/telefones" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/sexo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/sp_sexo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/array_sexo" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/rua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/rua" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/numero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/numero" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/complemento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/complemento" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/bairro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/bairro" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/tipo_sanguineo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/sp_tipo_sanguineo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/array_tipo_sanguineo" />
                </TableRow>

            </TableLayout>


            <TextView
                android:text="@string/telefones_de_familiares_e_amigos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="#99000000"
                android:textColor="#FFFFFF"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="1"
                android:stretchColumns="0">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/nome1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/nomeParente1" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/numero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/numeroParente1" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/linha"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/nome2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/nomeParente2" />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/numero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/numeroParente2" />
                </TableRow>

            </TableLayout>

            <Button
                android:text="@string/salvar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/BlueButton"
                android:textColor="@color/textIcons"
                android:onClick="salvarDados"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
